<resources>
    <string name="app_name">FYRE</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password">Enter password..........</string>
    <string name="log_in">Login</string>
    <string name="name">Enter name.......</string>
    <string name="reg_btn">Register</string>
    <string name="register_button">Register</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
